@@ -1,0 +1,128 @@
+OFXHEADER:100
+DATA:OFXSGML
+VERSION:102
+SECURITY:NONE
+ENCODING:USASCII
+CHARSET:1252
+COMPRESSION:NONE
+OLDFILEUID:NONE
+NEWFILEUID:NONE
+
+<OFX>
+  <SIGNONMSGSRSV1>
+    <SONRS>
+      <STATUS>
+        <CODE>0</CODE>
+        <SEVERITY>INFO</SEVERITY>
+      </STATUS>
+      <DTSERVER>20070623192010</DTSERVER>
+      <LANGUAGE>ENG</LANGUAGE>
+      <FI>
+        <ORG>Citigroup</ORG>
+        <FID>24909</FID>
+      </FI>
+      <INTU.BID>24909</INTU.BID>
+    </SONRS>
+  </SIGNONMSGSRSV1>
+  <CREDITCARDMSGSRSV1>
+    <CCSTMTTRNRS>
+      <TRNUID>0</TRNUID>
+      <STATUS>
+        <CODE>0</CODE>
+        <SEVERITY>INFO</SEVERITY>
+      </STATUS>
+      <CCSTMTRS>
+        <CURDEF>USD</CURDEF>
+        <CCACCTFROM>
+          <ACCTID>XXXXXXXXXXXX1111</ACCTID>
+        </CCACCTFROM>
+        <BANKTRANLIST>
+          <DTSTART>20070509120000</DTSTART>
+          <DTEND>20070608120000</DTEND>
+          <STMTTRN>
+            <TRNTYPE>DEBIT</TRNTYPE>
+            <DTPOSTED>20070510170000</DTPOSTED>
+            <TRNAMT>-19.17</TRNAMT>
+            <FITID>xx</FITID>
+            <SIC>5912</SIC>
+            <NAME>WALGREEN      34638675 ANYTOWN</NAME>
+          </STMTTRN>
+          <STMTTRN>
+            <TRNTYPE>DEBIT</TRNTYPE>
+            <DTPOSTED>20070512170000</DTPOSTED>
+            <TRNAMT>-12.0</TRNAMT>
+            <FITID>yy-56</FITID>
+            <SIC>7933</SIC>
+            <NAME>SUNSET BOWL            ANYTOWN</NAME>
+          </STMTTRN>
+          <STMTTRN>
+            <TRNTYPE>CREDIT</TRNTYPE>
+            <DTPOSTED>20070526170000</DTPOSTED>
+            <TRNAMT>11.01</TRNAMT>
+            <FITID>78-9</FITID>
+            <SIC>0000</SIC>
+            <NAME>ELECTRONIC PAYMENT-THANK YOU</NAME>
+          </STMTTRN>
+        </BANKTRANLIST>
+        <LEDGERBAL>
+          <BALAMT>-1111.01</BALAMT>
+          <DTASOF>20070623192013</DTASOF>
+        </LEDGERBAL>
+        <AVAILBAL>
+          <BALAMT>19000.99</BALAMT>
+          <DTASOF>20070623192013</DTASOF>
+        </AVAILBAL>
+      </CCSTMTRS>
+    </CCSTMTTRNRS>
+    <CCSTMTTRNRS>
+      <TRNUID>0</TRNUID>
+      <STATUS>
+        <CODE>0</CODE>
+        <SEVERITY>INFO</SEVERITY>
+      </STATUS>
+      <CCSTMTRS>
+        <CURDEF>USD</CURDEF>
+        <CCACCTFROM>
+          <ACCTID>XXXXXXXXXXXX2222</ACCTID>
+        </CCACCTFROM>
+        <BANKTRANLIST>
+          <DTSTART>20070509120000</DTSTART>
+          <DTEND>20070608120000</DTEND>
+          <STMTTRN>
+            <TRNTYPE>DEBIT</TRNTYPE>
+            <DTPOSTED>20070510170000</DTPOSTED>
+            <TRNAMT>-19.17</TRNAMT>
+            <FITID>xx</FITID>
+            <SIC>5912</SIC>
+            <NAME>WALGREEN      34638675 ANYTOWN</NAME>
+          </STMTTRN>
+          <STMTTRN>
+            <TRNTYPE>DEBIT</TRNTYPE>
+            <DTPOSTED>20070512170000</DTPOSTED>
+            <TRNAMT>-12.0</TRNAMT>
+            <FITID>yy-56</FITID>
+            <SIC>7933</SIC>
+            <NAME>SUNSET BOWL            ANYTOWN</NAME>
+          </STMTTRN>
+          <STMTTRN>
+            <TRNTYPE>CREDIT</TRNTYPE>
+            <DTPOSTED>20070526170000</DTPOSTED>
+            <TRNAMT>11.01</TRNAMT>
+            <FITID>78-9</FITID>
+            <SIC>0000</SIC>
+            <NAME>ELECTRONIC PAYMENT-THANK YOU</NAME>
+          </STMTTRN>
+        </BANKTRANLIST>
+        <LEDGERBAL>
+          <BALAMT>-1111.01</BALAMT>
+          <DTASOF>20070623192013</DTASOF>
+        </LEDGERBAL>
+        <AVAILBAL>
+          <BALAMT>19000.99</BALAMT>
+          <DTASOF>20070623192013</DTASOF>
+        </AVAILBAL>
+      </CCSTMTRS>
+    </CCSTMTTRNRS>
+  </CREDITCARDMSGSRSV1>
+</OFX>
+
