@@ -1,3 +1,7 @@
+== Unreleased
+
+* Now supports parsing files that contain multiple bank and/or credit card accounts. (Justin Mecham)
+
 == 1.1.0
 
 * Works on Ruby 1.9! (Reported by Tim Holmes)
